--- a/src/editor/client/viewer.css
+++ b/src/editor/client/viewer.css
@@ -3,6 +3,12 @@
 body{
 	margin: 0px;
 	display: flex;
+	overflow: hidden;
+	font-family: Arial;
+	text-shadow: 0px 1px 0px rgba(255,255,255,0.9);
+	align-items: center;
+	height: 100vh;
+	background: #DDD;
 }
 
 @keyframes hideExplorer{
@@ -25,10 +31,11 @@ body{
 
 #explorer{
 	width: 300px;
-	height: 100vh;
-	background: linear-gradient(to right,  #ddd,#fff);
+	height: 80vh;
+	background: #EEE;
 	padding: 5px;
 	
+	box-shadow: 1px 0px 10px #DDD;
 	border-right: 1px solid #eee;
 	
 	overflow: hidden;
@@ -41,7 +48,7 @@ body{
 	
 }
 
-#explorer:hover{
+#explorer.open{
 	animation: showExplorer 0.5s;
 	transform: translate(0px, 0px);
 }
@@ -51,16 +58,20 @@ body{
 	text-align: center;
 	
 	
-	background: rgba(0,0,0,0.3);
+	background: linear-gradient(to bottom, #FFF, #EEE);
+	border: 1px solid rgba(205,208,210, 1);
+	
+	border-radius: 4px;
 	
 	font-size: 1.2em;
-	color: lightgray;
+	color: gray;
 }
 
 #explorer h2{
 	font-size: 0.8em;
 	border: 1px solid lightgray;
 	color: gray;
+	background: white;
 }
 
 #explorer-content{
@@ -75,7 +86,6 @@ body{
 
 #explorer .item{
 	width: 95%;
-	background: rgba(255,255,255,0.4);
 
 	border-bottom: 1px solid lightgray;
 	
@@ -89,8 +99,9 @@ body{
 }
 
 #explorer .item.dir{
-	background: rgba(10,10,10,0.05);
+	background: linear-gradient(to bottom, #FFF, #EEE);
 	margin-bottom: 8px;
+	font-weight: bold;
 }
 
 #explorer .item:hover{
@@ -105,9 +116,25 @@ body{
 
 #viewer iframe{
 	width: 100%;
-	height: 100%;
-	
+	height: 100vh;
+	background: white;
 	border: 0px;
+	box-shadow: 1px 1px 5px #AAA;
+	transform: translate(10px, 0px);
+}
+
+#editor{
+	
+	
+	background: linear-gradient(to left,  #ddd,#fff);
+	padding: 5px;
+	
+	border-left: 1px solid #eee;
+	
+	overflow: hidden;
+	
+	
+	transform: translate(780px, 0px);
 }
 
 /*======================================*/
